kubernetes/local/tlpedido-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tlpedido-deployment
  labels:
    app: tlpedido-deployment
spec:
  selector:
    matchLabels:
      app: tlpedido
  replicas: 1
  template:
    metadata:
      labels:
        app: tlpedido
    spec:      
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
        - name: tlpedido
          image: luisferrarezi/tlpedido:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "1.0"
          ports:
            - containerPort: 8081
              name: tlpedido-port
---
apiVersion: v1
kind: Service
metadata:
  name: tlpedido-svc
spec:
  selector:
    app: tlpedido
  ports:
  - port: 81
    targetPort: 8081
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tlpedido-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /pedidos
        backend:
          service:
            name: tlpedido-svc
            port: 
              number: 81
